Fix homepage contributor spotlight image aspect ratio
Add object-fit: contain to .homepage-contributor-spotlight__logo img
to prevent the 'MDN its the web' image from being stretched on Safari.

Fixes #613

--- a/components/homepage-contributor-spotlight/server.css
+++ b/components/homepage-contributor-spotlight/server.css
@@ -79,6 +79,7 @@
     place-self: center;
     width: max-content;
     max-height: 8rem;
+    object-fit: contain;
   }
 }
 
